--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Isaac Gómez
-logo: /assets/FECC1019-0A9E-41B1-B535-A7EA0913D0C2.jpeg
+logo: /assets/profile.png
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
